<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/errorlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="70dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgfish"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_dead_fish"/>
        <TextView
            android:id="@+id/txta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgfish"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/txt1nointernet"/>
        <TextView
            android:id="@+id/txtb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txta"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:text="@string/txt2nointernet"/>
        <TextView
            android:id="@+id/txtc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtb"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/txt3nointernet"/>
        <Button
            android:id="@+id/cobafeeder"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="Coba Lagi"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shape_add_button"
            android:backgroundTint="@color/colorLayout3"/>
    </RelativeLayout>
</RelativeLayout>