<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayout1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_feeshchator3"/>
        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/desc_about"
            android:layout_below="@id/logo"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="Perancang :"
            android:layout_below="@id/txt"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/name_dev"
            android:layout_below="@id/per"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:textSize="13sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versi"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:textSize="13sp"/>
</RelativeLayout>
