<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MonitoringActivity"
    android:background="@color/cardview_shadow_end_color"
    android:id="@+id/controllinglayout">

    <View
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:backgroundTint="@color/colorLayout1"
        android:background="@drawable/header" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/monitorswipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="PEMANTAUAN AIR TAMBAK"
                android:textColor="#fff"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24dp" />
            <androidx.cardview.widget.CardView
                android:id="@+id/cvupdate"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_below="@id/title"
                android:layout_marginTop="15dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-20dp"
                android:backgroundTint="@color/cardview_light_background">
                <TextView
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12dp"/>
            </androidx.cardview.widget.CardView>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmermonitor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cvupdate"
                android:layout_marginTop="30dp">
                <include layout="@layout/shimmer_monitor"/>
            </com.facebook.shimmer.ShimmerFrameLayout>
            <RelativeLayout
                android:id="@+id/monitorlayout"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cvupdate"
                android:layout_marginTop="30dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvsuhu"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardCornerRadius="15dp"
                    android:backgroundTint="@color/cardview_light_background">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp">
                        <ImageView
                            android:id="@+id/imgtemp"
                            android:layout_width="70dp"
                            android:layout_centerVertical="true"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_suhu"/>

                        <TextView
                            android:id="@+id/txtsuhu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="27dp"/>
                        <TextView
                            android:id="@+id/lblcelcius"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:text="°C"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="27dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvph"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_below="@id/cvsuhu"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="15dp"
                    android:backgroundTint="@color/cardview_light_background">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp">
                        <ImageView
                            android:id="@+id/imgph"
                            android:layout_width="70dp"
                            android:layout_centerVertical="true"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_phair" />

                        <TextView
                            android:id="@+id/txtph"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="27dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvsalinity"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_below="@id/cvph"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="15dp"
                    android:backgroundTint="@color/cardview_light_background">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp">
                        <ImageView
                            android:id="@+id/imgsalinity"
                            android:layout_width="70dp"
                            android:layout_centerVertical="true"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_salinity" />
                        <TextView
                            android:id="@+id/txtsalinity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="27dp"/>
                        <TextView
                            android:id="@+id/lblsal"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:text="ppm"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="20dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/errormonitor"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="70dp"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgfish"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_dead_fish"/>
                <TextView
                    android:id="@+id/txta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgfish"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/txt1nointernet"/>
                <TextView
                    android:id="@+id/txtb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txta"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginBottom="6dp"
                    android:text="@string/txt2nointernet"/>
                <TextView
                    android:id="@+id/txtc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtb"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/txt3nointernet"/>
                <Button
                    android:id="@+id/cobafeeder"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtc"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:text="Coba Lagi"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/shape_add_button"
                    android:backgroundTint="@color/colorLayout3"/>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_show_chart_24"
        android:backgroundTint="@color/colorLayout1"
        android:layout_gravity="bottom|end"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:visibility="invisible"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_up_24"
        android:backgroundTint="@color/colorLayout1"
        android:layout_gravity="bottom|end"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="85dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtfab1"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:padding="5dp"
            android:background="@color/colorLayout1"
            android:textColor="@color/colorWhite"
            android:text="Grafik"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLayout1"
            android:src="@drawable/ic_show_chart_24"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtfab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:visibility="invisible"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:padding="5dp"
            android:background="@color/colorLayout1"
            android:textColor="@color/colorWhite"
            android:text="Atur Batas"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLayout1"
            android:src="@drawable/ic_settings_24"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
